--- a/index.html
+++ b/index.html
@@ -2,56 +2,80 @@
 <html lang="en">
 
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <link rel="stylesheet" type="text/css" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-  <title>CV by Jelika</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <title>CV by Jelika</title>
 </head>
 
 <body>
-  <main>
-    <div class="cont">
-      <div id="about" class="item">
-        <div class="about-aside">
-          <h2>Who am I and What I`m doing here?</h2>
-          <p>Anjelika Smirnova</p>
-          <h2>Some words about my life:</h2>
-          <p> Over the years have a great motivation to go into programming & currently ready to
-            devote a lot of time to this, without sleep, etc., and all for have great expertise in this area. Fill in
-            the
-            gaps
-            that remain after university.</p>
+    <header>
+        <div class="header-wrapper">
+            <div class="header-icon">
+                <h1>CV</h1>
+            </div>
+            <nav>
+                <ul class="menu">
+                    <li>
+                        <a href="#about">About me</a>
+                    </li>
+                    <li>
+                        <a href="#skills">Skills</a>
+                    </li>
+                    <li>
+                        <a href="#education">Education</a>
+                    </li>
+                    <li>
+                        <a href="#contacts">Contacts</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-        <img class="avatar" src="https://pp.userapi.com/c637618/v637618362/30b65/MvXEplwGT_Q.jpg">
-      </div>
-      <div id="skills" class="item">
-        <h2>Skills and Experience</h2>
-        <p>Intermediate knowledge of C++, HTML,CSS,JS.</p>
-        <p>Had some coding experience during solving labs in unversity))0)</p>
-      </div>
-      <div id="education" class="item">
-        <h2>Education & English</h2>
-        <p>Study in BSUIR, watching a lot of online lectures (for instance MIT OpenCourseWare, SimpleCode)</p>
-        <p> Taliking about my english level it's approximately B1</p>
-      </div>
-      <div id="contacts" class="item contacts">
-        <h2>How to contact me?</h2>
-        <ul>
-          <li>
-            <a href="https://vk.com/id236178825"><i class="fab fa-vk"></i> </a>
-          </li>
-          <li>
-            <a href="https://t.me/anzhelika_smirnova"><i class="fab fa-telegram"></i></a>
-          </li>
-          <li>
-            <a href="http://instagram.com/anzhelika__smirnova"><i class="fab fa-instagram"></i></a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </main>
+    </header>
+    <main>
+        <div class="cont">
+            <div id="about" class="item">
+                <div class="about-aside">
+                    <h2>Who am I and What I`m doing here?</h2>
+                    <p>Anjelika Smirnova</p>
+                    <h2>Some words about my life:</h2>
+                    <p> Over the years have a great motivation to go into programming & currently ready to
+                        devote a lot of time to this, without sleep, etc., and all for have great expertise in this
+                        area. Fill in
+                        the
+                        gaps
+                        that remain after university.</p>
+                </div>
+                <img class="avatar" src="https://pp.userapi.com/c637618/v637618362/30b65/MvXEplwGT_Q.jpg">
+            </div>
+            <div id="skills" class="item">
+                <h2>Skills and Experience</h2>
+                <p>Intermediate knowledge of C++, HTML,CSS,JS.</p>
+                <p>Had some coding experience during solving labs in unversity))0)</p>
+            </div>
+            <div id="education" class="item">
+                <h2>Education & English</h2>
+                <p>Study in BSUIR, watching a lot of online lectures (for instance MIT OpenCourseWare, SimpleCode)</p>
+                <p> Taliking about my english level it's approximately B1</p>
+            </div>
+            <div id="contacts" class="item contacts">
+                <h2>How to contact me?</h2>
+                <ul>
+                    <li>
+                        <a href="https://vk.com/id236178825"><i class="fab fa-vk"></i> </a>
+                    </li>
+                    <li>
+                        <a href="https://t.me/anzhelika_smirnova"><i class="fab fa-telegram"></i></a>
+                    </li>
+                    <li>
+                        <a href="http://instagram.com/anzhelika__smirnova"><i class="fab fa-instagram"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </main>
 
 </body>
 
